update with version

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ ACCEPT_EULA=Y
 MSSQL_SA_PASSWORD=SUPER_SECRET_PASSWORD
 MSSQL_PID=Developer
 MSSQL_AGENT_ENABLED=True
+MSSQL_TELEMETRY_ENABLED=True
 TZ=Etc/UTC
 MSSQL_LCID=1033
 MSSQL_DATA_DIR=/var/opt/mssql/data
